--- a/static/city.html
+++ b/static/city.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>City Service Toggle</title>
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <style>
         .switch {
             position: relative;
@@ -51,8 +52,12 @@
     </style>
 </head>
 <body>
-    <h1>Toggle City Service Status</h1>
-    <div id="cities-container"></div>
+    <div class="container mt-5">
+        <h1 class="text-center mb-4">Toggle City Service Status</h1>
+        <div id="cities-container" class="row">
+            <!-- Cities will be populated here -->
+        </div>
+    </div>
 
     <script>
         document.addEventListener("DOMContentLoaded", function() {
@@ -62,16 +67,20 @@
                     const citiesContainer = document.getElementById('cities-container');
                     citiesContainer.innerHTML = '';
                     data.cities.forEach(city => {
-                        const div = document.createElement('div');
-                        div.innerHTML = `
-                            <label>${city.name}</label>
-                            <label class="switch">
-                                <input type="checkbox" data-city-id="${city._id}" ${city.is_served ? 'checked' : ''}>
-                                <span class="slider round"></span>
-                            </label>
-                            <br><br>
+                        const cityDiv = document.createElement('div');
+                        cityDiv.className = 'col-md-4 mb-3';
+                        cityDiv.innerHTML = `
+                            <div class="card">
+                                <div class="card-body">
+                                    <h5 class="card-title">${city.name}</h5>
+                                    <label class="switch">
+                                        <input type="checkbox" data-city-id="${city._id}" ${city.is_served ? 'checked' : ''}>
+                                        <span class="slider round"></span>
+                                    </label>
+                                </div>
+                            </div>
                         `;
-                        citiesContainer.appendChild(div);
+                        citiesContainer.appendChild(cityDiv);
                     });
 
                     const checkboxes = citiesContainer.querySelectorAll('input[type="checkbox"]');
@@ -103,5 +112,9 @@
                 });
         });
     </script>
+
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
